# cryptotrader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  pytest.ini
examples/: l2_updates_demo.py  market_maker.py  test_components.py  test_order_placement.py  test_orderbook_parsing.py
scripts/: analyze_market_data.py  market_data_recorder.py
src/deltatrader/: __init__.py
src/deltatrader/client/: __init__.py  auth.py  rest.py  websocket.py
src/deltatrader/core/: __init__.py  engine.py  live_order_manager.py  market_data.py  order_manager.py  paper_order_manager.py
src/deltatrader/models/: __init__.py  order.py  orderbook.py  product.py  trade.py
src/deltatrader/strategies/: __init__.py  base.py  example_strategy.py
src/deltatrader/utils/: config.py  integer_conversion.py  logger.py  timing.py
tests/: conftest.py  test_checksum_formats.py  test_components.py  test_integration_live.py  test_integration_paper.py  test_l2_updates.py  test_live_order_manager.py  test_orderbook_parsing.py  test_paper_order_manager.py  test_trade_handling.py
